# sentinel-rs

./: .gitignore  Cargo.toml  README.md  config.example.yaml  generator.sh
src/: config.rs  main.rs  parser.rs  state.rs
