[package]
name = "logen-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
linemux = "0.3.0"
ratatui = "0.30.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
